0.3.6
- Fixes a translation bug

0.3.5
- Compatibility fixes for jolla update 10
- Use km² as the unit of area rather than "sq km" - Thanks to Lauri Nurmi!
- New: Catalan translation by Agustí Clara
- New: Dutch translation by Heimen Stoffels
- New: Italian translation by Watchmaker and chetiserve
- Many small translation updates

0.3.4
- New: Slovenian translation by LjudLjus
- Finnish translation fix

0.3.3
- Fixes learnmode and countrylist

0.3.2
- New: Translated to Spanish by carmenfdezb
- Updated translations
- Some small fixes

0.3.1
- New: Translated to Finnish by Murtsi
- Updated some other translations
- Added font setting to switch between gamefont and themefont

0.3.0
- Complete new design
- New icon and headerimage
- New: A page with all countries and a countrypage for each of them
- New: Learnmode

0.2.2
- New: Translated to Swedish by Åke Engelbrektson
- New: Translated to French by juju_des_highlands
- New: Translated to Czech by fri
- New: Translated to Chinese by adrain
- New: About page

0.2.1
- New: Translated to German
- After you give an answer the matching item for all answers is shown

0.2.0
- New '60 seconds' game mode. Play against the clock!
- Highscore list.
- Better readable population and area numbers.
- Remember last game settings

0.1.1
- Some ui improvements

0.1
- First release