@@ -1,3 +1,6 @@
+upcoming
+- Choose question categories for a free game
+
 0.3.6
 - Fixes a translation bug
 
